formattnig done